<resources>
    <string name="app_name">ISP Analyser</string>
    <string name="action_settings">Settings</string>

    <string name="nav_user_info">User Info</string>
    <string name="nav_settings">Settings</string>
    <string name="user_info_user_name_hint">Name</string>
    <string name="user_info_email_hint">Email</string>
    <string name="action_user_save">Save</string>
    <string name="user_info_name">Name:</string>
    <string name="user_info_email">E-mail:</string>
    <string name="user_info_edit_title">Edit user info</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="main_btn_delete">Delete</string>

    <string name="add_item_btn_save">Save</string>
    <string name="add_item_btn_cancel">Cancel</string>
    <string name="add_item_subject_hint">Subject</string>
    <string name="add_item_content_hint">Content</string>
    <string name="action_cancel_edit">Cancel</string>

    <string name="nav_option_notes">Notes</string>
    <string name="nav_options_view_locations">View Networks</string>
    <string name="nav_option_about">About</string>
    <string name="app_description">3D Sketch of your network topology</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>

    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="ip_set_dialog_title">Set Address</string>
    <string name="action_delete">Delete</string>
    <string name="site_info_nodes">Nodes:</string>
    <string name="all_sites">All sites</string>
    <string name="sign_in">Sign in</string>
    <string name="btn_area_coverage">Acoperire</string>
    <string name="btn_network_route">Traseul retelei</string>
    <string name="btn_complaints">Deranjamente</string>
    <string name="activate_gps_title">GPS</string>
    <string name="activate_gps_message">GPS needs to be enabled in order to continue. Please activate your gps service first.</string>
    <string name="activate_gps_button">Ok</string>
    <string name="network_route_title">Network Route</string>
    <string name="coverage_map_title">Coverage Map</string>
    <string name="node_id_label">Node ID:</string>
    <string name="node_name_label">Name:</string>
    <string name="node_ip_label">IP:</string>
    <string name="node_last_updated_label">Last Updated:</string>
</resources>
