<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.unbm.andrei.ntviewer.activities.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        style="@style/LogoImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="89dp" />

    <LinearLayout
        style="@style/NavigationButtonsContainer"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp">

        <Button
            android:id="@+id/area_coverage_btn"
            style="@style/NavigationButton"
            android:text="@string/btn_area_coverage" />

        <Button
            android:id="@+id/complaints_btn"
            style="@style/NavigationButton"
            android:text="@string/btn_complaints" />

        <Button
            android:id="@+id/network_route_btn"
            style="@style/NavigationButton"
            android:text="@string/btn_network_route" />

    </LinearLayout>
</RelativeLayout>
