<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/NTViewer"
    android:layout_width="256dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:padding="10dp"
            android:layout_gravity="center"
            android:id="@+id/node_name"
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:text="Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/node_id_label"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/node_id_label" />

        <TextView
            android:id="@+id/node_id"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/node_ip_label"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/node_ip_label" />

        <TextView
            android:id="@+id/node_ip"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/node_last_updated_label"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/node_last_updated_label" />

        <TextView
            android:id="@+id/node_last_updated"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>


</LinearLayout>